welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: not found: value transition2
  for (compteur5 <- 1 to 3) {motif2() ; transition2()}
                                        ^